fix - fixed static website causing issues on buttons

--- a/index.html
+++ b/index.html
@@ -358,13 +358,13 @@
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
 									<div>
-										<p id="text27" class="text-component instance-27 style-7"><a href="https://sillypaper.crd.co/#section04"><u>Privacy Policy</u></a></p>
+										<p id="text27" class="text-component instance-27 style-7"><a href="#section04"><u>Privacy Policy</u></a></p>
 									</div>
 									<div>
-										<p id="text19" class="text-component instance-19 style-7"><a href="https://sillypaper.crd.co/#section06"><u>Cookie Policy</u></a></p>
+										<p id="text19" class="text-component instance-19 style-7"><a href="#section06"><u>Cookie Policy</u></a></p>
 									</div>
 									<div>
-										<p id="text22" class="text-component instance-22 style-7"><a href="https://sillypaper.crd.co/#section05"><u>Terms and Conditions</u></a></p>
+										<p id="text22" class="text-component instance-22 style-7"><a href="#section05"><u>Terms and Conditions</u></a></p>
 									</div>
 								</div>
 							</div>
@@ -386,8 +386,8 @@
 									<hr id="divider27" class="divider-component instance-27">
 									<p id="text30" class="text-component instance-30 style-6"><span class="p">Last Updated: June 23, 2025</span><span class="p">Your privacy is important to Silly Paper and we take our responsibility of caring for it seriously. This policy describes how Silly Paper Inc. (&quot;Silly Paper&quot;) processes the personal information we collect about you when you use our products and services or when you attend live events hosted by or in connection with Silly Paper (collectively, &quot;Services&quot; or &quot;Silly Paper Services&quot;). In some cases, our subsidiaries may be considered data controllers, either together with Silly Paper or by themselves.<br />1. Information We Collect<br />The information we collect depends on what Services you use and how you use them.<br />A. Information You Give Us Directly<br />ⓘ We collect information that you give us directly, such as when you create an Silly Paper Account, set up security questions, make purchases, or contact Silly Paper Help.<br />We collect information that you provide us, such as:<br />• Your Silly Paper Account information, including your email address, username, real name, country, date of birth, telephone number and password;<br />• Security questions and answers;<br />• Information you provide in response to surveys about our Services;<br />• Information you provide when seeking help from us, such as your name, telephone number, and records (including call recordings) of the issues you experience; and<br />• Billing information, such as your name, payment card number, payment account details, and shipping address.</span></p>
 									<hr id="divider04" class="divider-component instance-4">
-									<p id="text20" class="text-component instance-20 style-8">- <a href="https://sillypaper.crd.co/#section06"><u>Cookie Policy</u></a></p>
-									<p id="text23" class="text-component instance-23 style-8">- <a href="https://sillypaper.crd.co/#section05"><u>Terms and Conditions</u></a></p>
+									<p id="text20" class="text-component instance-20 style-8">- <a href="#section06"><u>Cookie Policy</u></a></p>
+									<p id="text23" class="text-component instance-23 style-8">- <a href="#section05"><u>Terms and Conditions</u></a></p>
 									<ul id="buttons01" class="buttons-component instance-1 style-1">
 										<li>
 											<a href="#home" class="n01" role="button">Home</a>
@@ -406,8 +406,8 @@
 									<hr id="divider29" class="divider-component instance-29">
 									<p id="text16" class="text-component instance-16 style-6"><span class="p">Last Updated: June 23, 2025</span><span class="p">Your privacy is important to Silly Paper and we take our responsibility of caring for it seriously. This policy describes how Silly Paper Inc. (&quot;Silly Paper&quot;) processes the personal information we collect about you when you use our products and services or when you attend live events hosted by or in connection with Silly Paper (collectively, &quot;Services&quot; or &quot;Silly Paper Services&quot;). In some cases, our subsidiaries may be considered data controllers, either together with Silly Paper or by themselves.<br />1. Information We Collect<br />The information we collect depends on what Services you use and how you use them.<br />A. Information You Give Us Directly<br />ⓘ We collect information that you give us directly, such as when you create an Silly Paper Account, set up security questions, make purchases, or contact Silly Paper Help.<br />We collect information that you provide us, such as:<br />• Your Silly Paper Account information, including your email address, username, real name, country, date of birth, telephone number and password;<br />• Security questions and answers;<br />• Information you provide in response to surveys about our Services;<br />• Information you provide when seeking help from us, such as your name, telephone number, and records (including call recordings) of the issues you experience; and<br />• Billing information, such as your name, payment card number, payment account details, and shipping address.</span></p>
 									<hr id="divider05" class="divider-component instance-5">
-									<p id="text17" class="text-component instance-17 style-8">- <a href="https://sillypaper.crd.co/#section04"><u>Privacy Policy</u></a></p>
-									<p id="text34" class="text-component instance-34 style-8">- <a href="https://sillypaper.crd.co/#section06"><u>Cookie Policy</u></a></p>
+									<p id="text17" class="text-component instance-17 style-8">- <a href="#section04"><u>Privacy Policy</u></a></p>
+									<p id="text34" class="text-component instance-34 style-8">- <a href="#section06"><u>Cookie Policy</u></a></p>
 									<ul id="buttons03" class="buttons-component instance-3 style-1">
 										<li>
 											<a href="#home" class="n01" role="button">Home</a>
@@ -426,8 +426,8 @@
 									<hr id="divider11" class="divider-component instance-11">
 									<p id="text29" class="text-component instance-29 style-6"><span class="p">Last Updated: June 23, 2025</span><span class="p">Your privacy is important to Silly Paper and we take our responsibility of caring for it seriously. This policy describes how Silly Paper Inc. (&quot;Silly Paper&quot;) processes the personal information we collect about you when you use our products and services or when you attend live events hosted by or in connection with Silly Paper (collectively, &quot;Services&quot; or &quot;Silly Paper Services&quot;). In some cases, our subsidiaries may be considered data controllers, either together with Silly Paper or by themselves.<br />1. Information We Collect<br />The information we collect depends on what Services you use and how you use them.<br />A. Information You Give Us Directly<br />ⓘ We collect information that you give us directly, such as when you create an Silly Paper Account, set up security questions, make purchases, or contact Silly Paper Help.<br />We collect information that you provide us, such as:<br />• Your Silly Paper Account information, including your email address, username, real name, country, date of birth, telephone number and password;<br />• Security questions and answers;<br />• Information you provide in response to surveys about our Services;<br />• Information you provide when seeking help from us, such as your name, telephone number, and records (including call recordings) of the issues you experience; and<br />• Billing information, such as your name, payment card number, payment account details, and shipping address.</span></p>
 									<hr id="divider07" class="divider-component instance-7">
-									<p id="text21" class="text-component instance-21 style-8">- <a href="https://sillypaper.crd.co/#section04"><u>Privacy Policy</u></a></p>
-									<p id="text18" class="text-component instance-18 style-8">- <a href="https://sillypaper.crd.co/#section05"><u>Terms and Conditions</u></a></p>
+									<p id="text21" class="text-component instance-21 style-8">- <a href="#section04"><u>Privacy Policy</u></a></p>
+									<p id="text18" class="text-component instance-18 style-8">- <a href="#section05"><u>Terms and Conditions</u></a></p>
 									<ul id="buttons07" class="buttons-component instance-7 style-1">
 										<li>
 											<a href="#home" class="n01" role="button">Home</a>
