fix - named sections more intuitively

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								<div class="inner" data-onvisible-trigger="1">
 									<div>
 										<div id="image09" class="image-component instance-9" data-position="left">
-											<a href="#section07" class="frame" oncontextmenu="return false;" ondragstart="return false;"><img src="assets/images/image09.jpg" alt="" title="Gameimage" oncontextmenu="return false;" ondragstart="return false;" /></a>
+											<a href="#games" class="frame" oncontextmenu="return false;" ondragstart="return false;"><img src="assets/images/image09.jpg" alt="" title="Gameimage" oncontextmenu="return false;" ondragstart="return false;" /></a>
 										</div>
 									</div>
 									<div>
@@ -172,7 +172,7 @@
 										<p id="text65" class="text-component instance-65 style-6">Duis penatibus dolor libero suspendisse montes. Massa dis eu tempus rhoncus tellus cursus pharetra nibh. Urna ridiculus velit sit etiam tristique donec rhoncus vestibulum.</p>
 										<ul id="buttons16" class="buttons-component instance-16 style-6">
 											<li>
-												<a href="#section07" class="n01" role="button">visit website</a>
+												<a href="#games" class="n01" role="button">visit website</a>
 											</li>
 										</ul>
 										<ul id="icons06" class="icons-component instance-6 style-1">
@@ -197,11 +197,11 @@
 								<div class="inner" data-onvisible-trigger="1">
 									<div>
 										<div id="image02" class="image-component instance-2" data-position="left">
-											<a href="#section07" class="frame" oncontextmenu="return false;" ondragstart="return false;"><img src="assets/images/image02.jpg" alt="" title="Gameimage" oncontextmenu="return false;" ondragstart="return false;" /></a>
+											<a href="#games" class="frame" oncontextmenu="return false;" ondragstart="return false;"><img src="assets/images/image02.jpg" alt="" title="Gameimage" oncontextmenu="return false;" ondragstart="return false;" /></a>
 										</div>
 										<ul id="buttons04" class="buttons-component instance-4 style-6">
 											<li>
-												<a href="#section07" class="n01" role="button">visit website</a>
+												<a href="#games" class="n01" role="button">visit website</a>
 											</li>
 										</ul>
 										<ul id="icons09" class="icons-component instance-9 style-1">
@@ -235,7 +235,7 @@
 										<p id="text55" class="text-component instance-55 style-6">Our games can be played from the comfort of your tablet or mobile phone. You can download games from the Apple App Store or from Google Play.</p>
 										<ul id="buttons12" class="buttons-component instance-12 style-5">
 											<li>
-												<a href="#section06" class="n01" role="button"><svg aria-labelledby="buttons12-icon-1-title"><title id="buttons12-icon-1-title">Cloud</title><use xlink:href="assets/icons.svg#cloud"></use></svg><span class="label">more games</span></a>
+												<a href="#cookie-policy" class="n01" role="button"><svg aria-labelledby="buttons12-icon-1-title"><title id="buttons12-icon-1-title">Cloud</title><use xlink:href="assets/icons.svg#cloud"></use></svg><span class="label">more games</span></a>
 											</li>
 										</ul>
 										<ul id="icons04" class="icons-component instance-4">
@@ -358,13 +358,13 @@
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
 									<div>
-										<p id="text27" class="text-component instance-27 style-7"><a href="#section04"><u>Privacy Policy</u></a></p>
+										<p id="text27" class="text-component instance-27 style-7"><a href="#privacy-policy"><u>Privacy Policy</u></a></p>
 									</div>
 									<div>
-										<p id="text19" class="text-component instance-19 style-7"><a href="#section06"><u>Cookie Policy</u></a></p>
+										<p id="text19" class="text-component instance-19 style-7"><a href="#cookie-policy"><u>Cookie Policy</u></a></p>
 									</div>
 									<div>
-										<p id="text22" class="text-component instance-22 style-7"><a href="#section05"><u>Terms and Conditions</u></a></p>
+										<p id="text22" class="text-component instance-22 style-7"><a href="#terms-and-conditions"><u>Terms and Conditions</u></a></p>
 									</div>
 								</div>
 							</div>
@@ -377,7 +377,7 @@
 							</div>
 						</div>
 					</section>
-					<section id="section04-section" data-title="Privacy and Cookie Policy">
+					<section id="privacy-policy-section" data-title="Privacy and Cookie Policy">
 						<div id="container14" class="container-component instance-14 default full screen">
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
@@ -386,8 +386,8 @@
 									<hr id="divider27" class="divider-component instance-27">
 									<p id="text30" class="text-component instance-30 style-6" data-content-file="content/privacy-policy.html">Loading...</p>
 									<hr id="divider04" class="divider-component instance-4">
-									<p id="text20" class="text-component instance-20 style-8">- <a href="#section06"><u>Cookie Policy</u></a></p>
-									<p id="text23" class="text-component instance-23 style-8">- <a href="#section05"><u>Terms and Conditions</u></a></p>
+									<p id="text20" class="text-component instance-20 style-8">- <a href="#cookie-policy"><u>Cookie Policy</u></a></p>
+									<p id="text23" class="text-component instance-23 style-8">- <a href="#terms-and-conditions"><u>Terms and Conditions</u></a></p>
 									<ul id="buttons01" class="buttons-component instance-1 style-1">
 										<li>
 											<a href="#home" class="n01" role="button">Home</a>
@@ -397,7 +397,7 @@
 							</div>
 						</div>
 					</section>
-					<section id="section05-section">
+					<section id="terms-and-conditions-section">
 						<div id="container09" class="container-component instance-9 default full screen">
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
@@ -406,8 +406,8 @@
 									<hr id="divider29" class="divider-component instance-29">
 									<p id="text16" class="text-component instance-16 style-6" data-content-file="content/terms-and-conditions.html">Loading...</p>
 									<hr id="divider05" class="divider-component instance-5">
-									<p id="text17" class="text-component instance-17 style-8">- <a href="#section04"><u>Privacy Policy</u></a></p>
-									<p id="text34" class="text-component instance-34 style-8">- <a href="#section06"><u>Cookie Policy</u></a></p>
+									<p id="text17" class="text-component instance-17 style-8">- <a href="#privacy-policy"><u>Privacy Policy</u></a></p>
+									<p id="text34" class="text-component instance-34 style-8">- <a href="#cookie-policy"><u>Cookie Policy</u></a></p>
 									<ul id="buttons03" class="buttons-component instance-3 style-1">
 										<li>
 											<a href="#home" class="n01" role="button">Home</a>
@@ -417,7 +417,7 @@
 							</div>
 						</div>
 					</section>
-					<section id="section06-section">
+					<section id="cookie-policy-section">
 						<div id="container04" class="container-component instance-4 default full screen">
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
@@ -426,8 +426,8 @@
 									<hr id="divider11" class="divider-component instance-11">
 									<p id="text29" class="text-component instance-29 style-6" data-content-file="content/cookie-policy.html">Loading...</p>
 									<hr id="divider07" class="divider-component instance-7">
-									<p id="text21" class="text-component instance-21 style-8">- <a href="#section04"><u>Privacy Policy</u></a></p>
-									<p id="text18" class="text-component instance-18 style-8">- <a href="#section05"><u>Terms and Conditions</u></a></p>
+									<p id="text21" class="text-component instance-21 style-8">- <a href="#privacy-policy"><u>Privacy Policy</u></a></p>
+									<p id="text18" class="text-component instance-18 style-8">- <a href="#terms-and-conditions"><u>Terms and Conditions</u></a></p>
 									<ul id="buttons07" class="buttons-component instance-7 style-1">
 										<li>
 											<a href="#home" class="n01" role="button">Home</a>
@@ -437,7 +437,7 @@
 							</div>
 						</div>
 					</section>
-					<section id="done-section"></section>
+					<section id="end-section"></section>
 				</div>
 			</div>
 		</div>
