fix - fixed SEO titles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Silly Paper (Minimal) (Yellow)</title>
+		<title>Silly Paper</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="color-scheme" content="light only" />
 		<meta name="description" content="We Build Games # silly paper" />
-		<meta property="og:site_name" content="Silly Paper (Minimal) (Yellow)" />
-		<meta property="og:title" content="Silly Paper (Minimal) (Yellow)" />
+		<meta property="og:site_name" content="Silly Paper" />
+		<meta property="og:title" content="Silly Paper" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="We Build Games # silly paper" />
 		<link href="https://fonts.googleapis.com/css2?display=swap&family=Monomaniac+One:ital,wght@0,400;1,400&family=Inter:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600" rel="stylesheet" type="text/css" />
