--- a/index.html
+++ b/index.html
@@ -32,39 +32,6 @@
 										<h1 id="text01" class="text-component instance-1 style-5">we build <mark>games</mark></h1>
 										<p id="text02" class="text-component instance-2 style-12"><span class="p">“ Simple. Subtle. Surprising. ”</span><span class="p">We believe great products instantly stand out, they spark joy and delight and they do so by mixing several influences and tastes into one cohesive experience.</span></p>
 										<hr id="divider01" class="divider-component instance-1">
-										<ul id="icons03" class="icons-component instance-3">
-											<li>
-												<a class="n01" href="#" role="button">
-													<svg aria-labelledby="icons03-icon-1-title"><title id="icons03-icon-1-title">X</title><use xlink:href="assets/icons.svg#x"></use></svg>
-													<span class="label">X</span>
-												</a>
-											</li><li>
-												<a class="n02" href="#" role="button">
-													<svg aria-labelledby="icons03-icon-2-title"><title id="icons03-icon-2-title">Instagram</title><use xlink:href="assets/icons.svg#instagram"></use></svg>
-													<span class="label">Instagram</span>
-												</a>
-											</li><li>
-												<a class="n03" href="#" role="button">
-													<svg aria-labelledby="icons03-icon-3-title"><title id="icons03-icon-3-title">Facebook</title><use xlink:href="assets/icons.svg#facebook"></use></svg>
-													<span class="label">Facebook</span>
-												</a>
-											</li><li>
-												<a class="n04" href="#" role="button">
-													<svg aria-labelledby="icons03-icon-4-title"><title id="icons03-icon-4-title">LinkedIn</title><use xlink:href="assets/icons.svg#linkedin"></use></svg>
-													<span class="label">LinkedIn</span>
-												</a>
-											</li><li>
-												<a class="n05" href="#" role="button">
-													<svg aria-labelledby="icons03-icon-5-title"><title id="icons03-icon-5-title">Discord</title><use xlink:href="assets/icons.svg#discord"></use></svg>
-													<span class="label">Discord</span>
-												</a>
-											</li><li>
-												<a class="n06" href="#" role="button">
-													<svg aria-labelledby="icons03-icon-6-title"><title id="icons03-icon-6-title">Email</title><use xlink:href="assets/icons.svg#email"></use></svg>
-													<span class="label">Email</span>
-												</a>
-											</li>
-										</ul>
 										<hr id="divider09" class="divider-component instance-9">
 										<hr id="divider10" class="divider-component instance-10">
 									</div>
@@ -90,39 +57,6 @@
 										<hr id="divider14" class="divider-component instance-14">
 										<hr id="divider12" class="divider-component instance-12 style-1">
 										<hr id="divider23" class="divider-component instance-23">
-										<ul id="icons01" class="icons-component instance-1">
-											<li>
-												<a class="n01" href="#" role="button">
-													<svg aria-labelledby="icons01-icon-1-title"><title id="icons01-icon-1-title">X</title><use xlink:href="assets/icons.svg#x"></use></svg>
-													<span class="label">X</span>
-												</a>
-											</li><li>
-												<a class="n02" href="#" role="button">
-													<svg aria-labelledby="icons01-icon-2-title"><title id="icons01-icon-2-title">Instagram</title><use xlink:href="assets/icons.svg#instagram"></use></svg>
-													<span class="label">Instagram</span>
-												</a>
-											</li><li>
-												<a class="n03" href="#" role="button">
-													<svg aria-labelledby="icons01-icon-3-title"><title id="icons01-icon-3-title">Facebook</title><use xlink:href="assets/icons.svg#facebook"></use></svg>
-													<span class="label">Facebook</span>
-												</a>
-											</li><li>
-												<a class="n04" href="#" role="button">
-													<svg aria-labelledby="icons01-icon-4-title"><title id="icons01-icon-4-title">LinkedIn</title><use xlink:href="assets/icons.svg#linkedin"></use></svg>
-													<span class="label">LinkedIn</span>
-												</a>
-											</li><li>
-												<a class="n05" href="#" role="button">
-													<svg aria-labelledby="icons01-icon-5-title"><title id="icons01-icon-5-title">Discord</title><use xlink:href="assets/icons.svg#discord"></use></svg>
-													<span class="label">Discord</span>
-												</a>
-											</li><li>
-												<a class="n06" href="#" role="button">
-													<svg aria-labelledby="icons01-icon-6-title"><title id="icons01-icon-6-title">Email</title><use xlink:href="assets/icons.svg#email"></use></svg>
-													<span class="label">Email</span>
-												</a>
-											</li>
-										</ul>
 										<hr id="divider17" class="divider-component instance-17">
 									</div>
 									<span></span>
@@ -229,26 +163,9 @@
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
 									<div>
-										<hr id="divider25" class="divider-component instance-25">
-										<hr id="divider19" class="divider-component instance-19">
-										<p id="text54" class="text-component instance-54 style-2">play our games</p>
-										<p id="text55" class="text-component instance-55 style-6">Our games can be played from the comfort of your tablet or mobile phone. You can download games from the Apple App Store or from Google Play.</p>
 										<ul id="buttons12" class="buttons-component instance-12 style-5">
 											<li>
 												<a href="#cookie-policy" class="n01" role="button"><svg aria-labelledby="buttons12-icon-1-title"><title id="buttons12-icon-1-title">Cloud</title><use xlink:href="assets/icons.svg#cloud"></use></svg><span class="label">more games</span></a>
-											</li>
-										</ul>
-										<ul id="icons04" class="icons-component instance-4">
-											<li>
-												<a class="n01" href="#" role="button">
-													<svg aria-labelledby="icons04-icon-1-title"><title id="icons04-icon-1-title">Apple App Store</title><use xlink:href="assets/icons.svg#apple-appstore"></use></svg>
-													<span class="label">Apple App Store</span>
-												</a>
-											</li><li>
-												<a class="n02" href="#" role="button">
-													<svg aria-labelledby="icons04-icon-2-title"><title id="icons04-icon-2-title">Google Play</title><use xlink:href="assets/icons.svg#google-play"></use></svg>
-													<span class="label">Google Play</span>
-												</a>
 											</li>
 										</ul>
 									</div>
@@ -259,46 +176,28 @@
 						<div id="container08" class="container-component instance-8 style-4 default full screen" data-visibility="desktop">
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
-									<h2 id="text04" class="text-component instance-4 style-11">social</h2>
-									<p id="text07" class="text-component instance-7 style-3">Follow us on X, Instagram and Facebook for upcoming news, game releases, special bonuses.</p>
-									<ul id="icons05" class="icons-component instance-5">
+									<h2 id="text04" class="text-component instance-4 style-11" style="opacity: 1; transform: none;">PLAY OUR GAMES
+									</h2>
+									<p id="text07" class="text-component instance-7 style-3" style="opacity: 1; transform: none;"><span
+											class="p">Our games can be played from the comfort of your tablet or mobile phone. You can download
+											games from the Apple App Store or from Google Play.</span><span class="p">Also follow us for upcoming
+											news, game releases.</span></p>
+									<ul id="icons04" class="icons-component instance-4">
 										<li>
 											<a class="n01" href="#" role="button">
-												<svg aria-labelledby="icons05-icon-1-title"><title id="icons05-icon-1-title">X</title><use xlink:href="assets/icons.svg#x"></use></svg>
-												<span class="label">X</span>
+												<svg aria-labelledby="icons04-icon-1-title" style="fill: white;"><title id="icons04-icon-1-title">Apple App Store</title><use xlink:href="assets/icons.svg#apple-appstore"></use></svg>
+												<span class="label">Apple App Store</span>
 											</a>
 										</li><li>
 											<a class="n02" href="#" role="button">
-												<svg aria-labelledby="icons05-icon-2-title"><title id="icons05-icon-2-title">Instagram</title><use xlink:href="assets/icons.svg#instagram"></use></svg>
-												<span class="label">Instagram</span>
-											</a>
-										</li><li>
-											<a class="n03" href="#" role="button">
-												<svg aria-labelledby="icons05-icon-3-title"><title id="icons05-icon-3-title">Facebook</title><use xlink:href="assets/icons.svg#facebook"></use></svg>
-												<span class="label">Facebook</span>
-											</a>
-										</li><li>
-											<a class="n04" href="#" role="button">
-												<svg aria-labelledby="icons05-icon-4-title"><title id="icons05-icon-4-title">LinkedIn</title><use xlink:href="assets/icons.svg#linkedin"></use></svg>
-												<span class="label">LinkedIn</span>
-											</a>
-										</li><li>
-											<a class="n05" href="#" role="button">
-												<svg aria-labelledby="icons05-icon-5-title"><title id="icons05-icon-5-title">Discord</title><use xlink:href="assets/icons.svg#discord"></use></svg>
-												<span class="label">Discord</span>
-											</a>
-										</li><li>
-											<a class="n06" href="#" role="button">
-												<svg aria-labelledby="icons05-icon-6-title"><title id="icons05-icon-6-title">Email</title><use xlink:href="assets/icons.svg#email"></use></svg>
-												<span class="label">Email</span>
+												<svg aria-labelledby="icons04-icon-2-title" style="fill: white;"><title id="icons04-icon-2-title">Google Play</title><use xlink:href="assets/icons.svg#google-play"></use></svg>
+												<span class="label">Google Play</span>
 											</a>
 										</li>
 									</ul>
-									<hr id="divider13" class="divider-component instance-13">
-									<ul id="buttons02" class="buttons-component instance-2 style-1">
-										<li>
-											<a href="#home" class="n01" role="button">Home</a>
-										</li>
+									<hr id="divider13" class="divider-component instance-13" style="opacity: 1; transform: none;">
+									<ul id="buttons02" class="buttons-component instance-2 style-1" style="opacity: 1; transform: none;">
+										<li><a href="#home" class="n01" role="button">Home</a></li>
 									</ul>
 								</div>
 							</div>
@@ -311,39 +210,6 @@
 									</div>
 									<div>
 										<p id="text39" class="text-component instance-39 style-13">Follow us on X, Instagram and Facebook for upcoming news, game releases, special bonuses.</p>
-										<ul id="icons02" class="icons-component instance-2">
-											<li>
-												<a class="n01" href="#" role="button">
-													<svg aria-labelledby="icons02-icon-1-title"><title id="icons02-icon-1-title">X</title><use xlink:href="assets/icons.svg#x"></use></svg>
-													<span class="label">X</span>
-												</a>
-											</li><li>
-												<a class="n02" href="#" role="button">
-													<svg aria-labelledby="icons02-icon-2-title"><title id="icons02-icon-2-title">Instagram</title><use xlink:href="assets/icons.svg#instagram"></use></svg>
-													<span class="label">Instagram</span>
-												</a>
-											</li><li>
-												<a class="n03" href="#" role="button">
-													<svg aria-labelledby="icons02-icon-3-title"><title id="icons02-icon-3-title">Facebook</title><use xlink:href="assets/icons.svg#facebook"></use></svg>
-													<span class="label">Facebook</span>
-												</a>
-											</li><li>
-												<a class="n04" href="#" role="button">
-													<svg aria-labelledby="icons02-icon-4-title"><title id="icons02-icon-4-title">LinkedIn</title><use xlink:href="assets/icons.svg#linkedin"></use></svg>
-													<span class="label">LinkedIn</span>
-												</a>
-											</li><li>
-												<a class="n05" href="#" role="button">
-													<svg aria-labelledby="icons02-icon-5-title"><title id="icons02-icon-5-title">Discord</title><use xlink:href="assets/icons.svg#discord"></use></svg>
-													<span class="label">Discord</span>
-												</a>
-											</li><li>
-												<a class="n06" href="#" role="button">
-													<svg aria-labelledby="icons02-icon-6-title"><title id="icons02-icon-6-title">Email</title><use xlink:href="assets/icons.svg#email"></use></svg>
-													<span class="label">Email</span>
-												</a>
-											</li>
-										</ul>
 										<hr id="divider02" class="divider-component instance-2 style-1">
 										<ul id="buttons05" class="buttons-component instance-5 style-1">
 											<li>
