fix - deleted cookie policy issues

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 									<div>
 										<ul id="buttons12" class="buttons-component instance-12 style-5">
 											<li>
-												<a href="#cookie-policy" class="n01" role="button"><svg aria-labelledby="buttons12-icon-1-title"><title id="buttons12-icon-1-title">Cloud</title><use xlink:href="assets/icons.svg#cloud"></use></svg><span class="label">more games</span></a>
+												<a href="#games" class="n01" role="button"><svg aria-labelledby="buttons12-icon-1-title"><title id="buttons12-icon-1-title">Cloud</title><use xlink:href="assets/icons.svg#cloud"></use></svg><span class="label">more games</span></a>
 											</li>
 										</ul>
 									</div>
@@ -227,7 +227,6 @@
 										<p id="text27" class="text-component instance-27 style-7"><a href="#privacy-policy"><u>Privacy Policy</u></a></p>
 									</div>
 									<div>
-										<p id="text19" class="text-component instance-19 style-7"><a href="#cookie-policy"><u>Cookie Policy</u></a></p>
 									</div>
 									<div>
 										<p id="text22" class="text-component instance-22 style-7"><a href="#terms-and-conditions"><u>Terms and Conditions</u></a></p>
@@ -243,7 +242,7 @@
 							</div>
 						</div>
 					</section>
-					<section id="privacy-policy-section" data-title="Privacy and Cookie Policy">
+					<section id="privacy-policy-section" data-title="Privacy Policy">
 						<div id="container14" class="container-component instance-14 default full screen">
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
@@ -252,7 +251,6 @@
 									<hr id="divider27" class="divider-component instance-27">
 									<p id="text30" class="text-component instance-30 style-6" data-content-file="content/privacy-policy.html">Loading...</p>
 									<hr id="divider04" class="divider-component instance-4">
-									<p id="text20" class="text-component instance-20 style-8">- <a href="#cookie-policy"><u>Cookie Policy</u></a></p>
 									<p id="text23" class="text-component instance-23 style-8">- <a href="#terms-and-conditions"><u>Terms and Conditions</u></a></p>
 									<ul id="buttons01" class="buttons-component instance-1 style-1">
 										<li>
@@ -273,28 +271,7 @@
 									<p id="text16" class="text-component instance-16 style-6" data-content-file="content/terms-and-conditions.html">Loading...</p>
 									<hr id="divider05" class="divider-component instance-5">
 									<p id="text17" class="text-component instance-17 style-8">- <a href="#privacy-policy"><u>Privacy Policy</u></a></p>
-									<p id="text34" class="text-component instance-34 style-8">- <a href="#cookie-policy"><u>Cookie Policy</u></a></p>
 									<ul id="buttons03" class="buttons-component instance-3 style-1">
-										<li>
-											<a href="#home" class="n01" role="button">Home</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</section>
-					<section id="cookie-policy-section">
-						<div id="container04" class="container-component instance-4 default full screen">
-							<div class="wrapper">
-								<div class="inner" data-onvisible-trigger="1">
-									<p id="text40" class="text-component instance-40 style-2">Cookie Policy</p>
-									<hr id="divider30" class="divider-component instance-30">
-									<hr id="divider11" class="divider-component instance-11">
-									<p id="text29" class="text-component instance-29 style-6" data-content-file="content/cookie-policy.html">Loading...</p>
-									<hr id="divider07" class="divider-component instance-7">
-									<p id="text21" class="text-component instance-21 style-8">- <a href="#privacy-policy"><u>Privacy Policy</u></a></p>
-									<p id="text18" class="text-component instance-18 style-8">- <a href="#terms-and-conditions"><u>Terms and Conditions</u></a></p>
-									<ul id="buttons07" class="buttons-component instance-7 style-1">
 										<li>
 											<a href="#home" class="n01" role="button">Home</a>
 										</li>
