--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta property="og:title" content="Silly Paper" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="We Build Games # silly paper" />
+		<meta name="theme-color" content="#FFBC0F" />
 		<link href="https://fonts.googleapis.com/css2?display=swap&family=Monomaniac+One:ital,wght@0,400;1,400&family=Inter:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600" rel="stylesheet" type="text/css" />
 		<link rel="icon" type="image/png" href="assets/images/favicon.png" />
 		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png" />
@@ -31,8 +32,9 @@
 										<hr id="divider24" class="divider-component instance-24">
 										<h1 id="text01" class="text-component instance-1 style-5">we build <mark>games</mark></h1>
 										<p id="text02" class="text-component instance-2 style-12"><span class="p">“ Simple. Subtle. Surprising. ”</span><span class="p">We believe great products instantly stand out, they spark joy and delight and they do so by mixing several influences and tastes into one cohesive experience.</span></p>
-										<hr id="divider01" class="divider-component instance-1">
+										<hr id="divider19" class="divider-component instance-19">
 										<hr id="divider09" class="divider-component instance-9">
+										<hr id="divider31" class="divider-component instance-31">
 										<hr id="divider10" class="divider-component instance-10">
 									</div>
 									<span></span>
@@ -176,27 +178,23 @@
 						<div id="container08" class="container-component instance-8 style-4 default full screen" data-visibility="desktop">
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
-									<h2 id="text04" class="text-component instance-4 style-11" style="opacity: 1; transform: none;">PLAY OUR GAMES
-									</h2>
-									<p id="text07" class="text-component instance-7 style-3" style="opacity: 1; transform: none;"><span
-											class="p">Our games can be played from the comfort of your tablet or mobile phone. You can download
-											games from the Apple App Store or from Google Play.</span><span class="p">Also follow us for upcoming
-											news, game releases.</span></p>
-									<ul id="icons04" class="icons-component instance-4">
+									<h2 id="text04" class="text-component instance-4 style-11">PLAY OUR GAMES</h2>
+									<p id="text07" class="text-component instance-7 style-3"><span class="p">Our games can be played from the comfort of your tablet or mobile phone. You can download games from the Apple App Store or from Google Play.</span><span class="p">Also follow us for upcoming news, game releases.</span></p>
+									<ul id="icons02" class="icons-component instance-2">
 										<li>
 											<a class="n01" href="#" role="button">
-												<svg aria-labelledby="icons04-icon-1-title" style="fill: white;"><title id="icons04-icon-1-title">Apple App Store</title><use xlink:href="assets/icons.svg#apple-appstore"></use></svg>
+												<svg aria-labelledby="icons02-icon-1-title"><title id="icons02-icon-1-title">Apple App Store</title><use xlink:href="assets/icons.svg#apple-appstore"></use></svg>
 												<span class="label">Apple App Store</span>
 											</a>
 										</li><li>
 											<a class="n02" href="#" role="button">
-												<svg aria-labelledby="icons04-icon-2-title" style="fill: white;"><title id="icons04-icon-2-title">Google Play</title><use xlink:href="assets/icons.svg#google-play"></use></svg>
+												<svg aria-labelledby="icons02-icon-2-title"><title id="icons02-icon-2-title">Google Play</title><use xlink:href="assets/icons.svg#google-play"></use></svg>
 												<span class="label">Google Play</span>
 											</a>
 										</li>
 									</ul>
-									<hr id="divider13" class="divider-component instance-13" style="opacity: 1; transform: none;">
-									<ul id="buttons02" class="buttons-component instance-2 style-1" style="opacity: 1; transform: none;">
+									<hr id="divider13" class="divider-component instance-13">
+									<ul id="buttons02" class="buttons-component instance-2 style-1">
 										<li><a href="#home" class="n01" role="button">Home</a></li>
 									</ul>
 								</div>
@@ -206,10 +204,23 @@
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
 									<div>
-										<h2 id="text26" class="text-component instance-26 style-11">social</h2>
+										<h2 id="text26" class="text-component instance-26 style-11">PLAY OUR GAMES</h2>
 									</div>
 									<div>
-										<p id="text39" class="text-component instance-39 style-13">Follow us on X, Instagram and Facebook for upcoming news, game releases, special bonuses.</p>
+										<p id="text39" class="text-component instance-39 style-13"><span class="p">Our games can be played from the comfort of your tablet or mobile phone. You can download games from the Apple App Store or from Google Play.</span><span class="p">Also follow us for upcoming news, game releases.</span></p>
+										<ul id="icons04" class="icons-component instance-4">
+											<li>
+												<a class="n01" href="#" role="button">
+													<svg aria-labelledby="icons04-icon-1-title"><title id="icons04-icon-1-title">Apple App Store</title><use xlink:href="assets/icons.svg#apple-appstore"></use></svg>
+													<span class="label">Apple App Store</span>
+												</a>
+											</li><li>
+												<a class="n02" href="#" role="button">
+													<svg aria-labelledby="icons04-icon-2-title"><title id="icons04-icon-2-title">Google Play</title><use xlink:href="assets/icons.svg#google-play"></use></svg>
+													<span class="label">Google Play</span>
+												</a>
+											</li>
+										</ul>
 										<hr id="divider02" class="divider-component instance-2 style-1">
 										<ul id="buttons05" class="buttons-component instance-5 style-1">
 											<li>
