update - updated the website to the latest version given by Istvan to reflect Mosaic Trails launch

--- a/index.html
+++ b/index.html
@@ -102,18 +102,15 @@
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
 									<div>
-										<div id="image09" class="image-component instance-9" data-position="left">
-											<a href="#games" class="frame" oncontextmenu="return false;" ondragstart="return false;"><img src="assets/images/image09.jpg" alt="" title="Gameimage" oncontextmenu="return false;" ondragstart="return false;" /></a>
+										<div id="image09" class="image-component instance-9" data-position="top left">
+											<a href="#games" class="frame deferred" oncontextmenu="return false;" ondragstart="return false;"><img src="/assets/images/MosaicTrails_landscape.png" alt="" title="Gameimage" oncontextmenu="return false;" ondragstart="return false;" /></a>
 										</div>
 									</div>
 									<div>
-										<h2 id="text52" class="text-component instance-52 style-4">brick breaker - puzzle game</h2>
-										<p id="text65" class="text-component instance-65 style-6">Duis penatibus dolor libero suspendisse montes. Massa dis eu tempus rhoncus tellus cursus pharetra nibh. Urna ridiculus velit sit etiam tristique donec rhoncus vestibulum.</p>
-										<ul id="buttons16" class="buttons-component instance-16 style-6">
-											<li>
-												<a href="#games" class="n01" role="button">visit website</a>
-											</li>
-										</ul>
+										<h2 id="text52" class="text-component instance-52 style-4">Mosaic Trails- puzzle adventure</h2>
+										<p id="text65" class="text-component instance-65 style-420">Coming soon!</p>
+										<p id="text11" class="text-component instance-11 style-6">Relax, focus, and piece the world together in our immersive jigsaw puzzle game. Explore breathtaking natural landscapes, from serene forests and majestic mountains to tranquil beaches and colorful sunsets. Travel through vibrant city streets inspired by iconic destinations, and discover famous landmarks. Every completed puzzle reveals a stunning scene waiting to be admired. Perfect for unwinding, sharpening your mind, and experiencing the beauty of our world—one piece at a time.</p>
+										<p id="text35" class="text-component instance-35 style-8">Download on:</p>
 										<ul id="icons06" class="icons-component instance-6 style-1">
 											<li>
 												<a class="n01" href="#" role="button">
@@ -135,12 +132,12 @@
 							<div class="wrapper">
 								<div class="inner" data-onvisible-trigger="1">
 									<div>
-										<div id="image02" class="image-component instance-2" data-position="left">
-											<a href="#games" class="frame" oncontextmenu="return false;" ondragstart="return false;"><img src="assets/images/image02.jpg" alt="" title="Gameimage" oncontextmenu="return false;" ondragstart="return false;" /></a>
+										<div id="image02" class="image-component instance-2" data-position="top left">
+											<a href="#games" class="frame deferred" oncontextmenu="return false;" ondragstart="return false;"><img src="/assets/images/MosaicTrails_portrait.png" alt="" title="Gameimage" oncontextmenu="return false;" ondragstart="return false;" /></a>
 										</div>
 										<ul id="buttons04" class="buttons-component instance-4 style-6">
 											<li>
-												<a href="#games" class="n01" role="button">visit website</a>
+												<p id="text35" class="text-component instance-35 style-8">Download on:</p>
 											</li>
 										</ul>
 										<ul id="icons09" class="icons-component instance-9 style-1">
@@ -158,8 +155,9 @@
 										</ul>
 									</div>
 									<div>
-										<h2 id="text13" class="text-component instance-13 style-4">brick breaker - puzzle game</h2>
-										<p id="text60" class="text-component instance-60 style-6">Duis penatibus dolor libero suspendisse montes. Massa dis eu tempus rhoncus tellus cursus pharetra nibh. Urna ridiculus velit sit etiam tristique donec rhoncus vestibulum.</p>
+										<h2 id="text13" class="text-component instance-13 style-4">Mosaic Trails- puzzle adventure</h2>
+										<p id="text60" class="text-component instance-60 style-6">Relax, focus, and piece the world together in our immersive jigsaw puzzle game. Explore breathtaking natural landscapes, from serene forests and majestic mountains to tranquil beaches and colorful sunsets. Travel through vibrant city streets inspired by iconic destinations, and discover famous landmarks. Every completed puzzle reveals a stunning scene waiting to be admired. Perfect for unwinding, sharpening your mind, and experiencing the beauty of our world—one piece at a time.</p>
+										<p id="text24" class="text-component instance-24 style-420">Coming Soon!</p>
 									</div>
 								</div>
 							</div>
